get-routes api/users, api/teams added + doc + doc fixes for get api/profile
